swagger doc for current-user endpoint
